# src/modules/models/Insert.js
@@ -1,19 +1,0 @@
-/**
- * @swagger
- *  components:
- *      schemas:
- *          Insert:
- *             type: object
- *             properties:
- *                 affectedRows:
- *                     type: number
- *                 insertId:
- *                     type: number
- *                 warningStatus:
- *                     type: number
- *             example:
- *                 affectedRows: 1
- *                 insertId: 3
- *                 warningStatus : 0 
- * 
- */
